# vulkan_prac

./: CMakeLists.txt  README.md  main.cc  makefile
shader/: shader.vert
tools/: compile_shader.sh
